<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:id="@+id/fragment_firebase_photo_login"
                android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/login_icon_image"
        android:layout_width="120dp"
        android:layout_height="120dp"/>
    <TextView
        android:id="@+id/login_text_app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_image_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/user_icon"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:id="@+id/signup_email_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLines="1"
            android:lines="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:hint="@string/email_address"
            android:layout_toRightOf="@id/user_image_icon"
            android:textColor="@android:color/primary_text_light"/>

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/user_image_icon"
            android:src="@drawable/password_icon"/>

        <EditText
            android:layout_marginLeft="16dp"
            android:layout_below="@id/signup_email_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/signup_user_password"
            android:layout_toRightOf="@id/password_icon"/>

    </RelativeLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="16dp"
            android:fontFamily="sans-serif-condensed"
            android:background="@drawable/button_custom_rounded_edge"
            android:textColor="@android:color/white"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:id="@+id/login_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_custom_rounded_edge"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:fontFamily="sans-serif-condensed"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress_icon_layout">
    <ProgressBar
        android:id="@+id/login_progress_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"/>
    </RelativeLayout>


</LinearLayout>